stateless-poc-I/sso/sso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso
spec:
  ports:
    - name: jboss
      port: 8080
      targetPort: 8080
    - name: jboss-secure
      port: 8443
      targetPort: 8443
    - name: ejb
      port: 4447
      targetPort: 4447
  selector:
    app: sso
